--- a/src/app/modules/search-results/search-results.page.html
+++ b/src/app/modules/search-results/search-results.page.html
@@ -38,7 +38,7 @@
               </div>
 
               <div class="rating-icon">
-                <ion-icon color="secondary" slot="start" name="star"></ion-icon>
+                <ion-icon class="fn-10" color="secondary" slot="start" name="star"></ion-icon>
               </div>
             </div>
           </ion-button>
