--- a/src/app/modules/search-results/search-results.page.scss
+++ b/src/app/modules/search-results/search-results.page.scss
@@ -57,11 +57,11 @@
       .rating {
         display: flex;
 
-        .rating-icon {
-          ion-icon {
-            font-size: 15px;
-          }
-        }
+        // .rating-icon {
+        //   ion-icon {
+        //     font-size: 10px;
+        //   }
+        // }
       }
     }
   }
