--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -34,6 +34,10 @@ ion-toolbar {
     ion-icon {
       font-size: 40px !important;
     }
+
+    .direction-en{
+      transform: rotateY(180deg);
+    }
   }
   .arrow-edit-btns {
     ion-button::part(native) {
