--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -48,7 +48,7 @@
       <span>{{"change"|translate}}</span>
     </ion-button> -->
   </div>
-  <ion-button
+  <!-- <ion-button
     class="ion-padding-horizontal"
     expand="block"
     routerLink="/tabs/main"
@@ -56,6 +56,6 @@
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "change"|translate}}
     </span>
-  </ion-button>
+  </ion-button> -->
   <!-- </ion-card> -->
 </ion-content>
