--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -15,7 +15,7 @@
       <ion-radio-group (ionChange)="chooseLanguage($event)">
         <ion-list-header>
           <ion-label>
-            <h5 class="title">{{ "change langauge"|translate}}</h5></ion-label
+            <h5 class="title">{{ "choose langauge"|translate}}</h5></ion-label
           >
         </ion-list-header>
 
