--- a/src/app/modules/policy/policy.page.html
+++ b/src/app/modules/policy/policy.page.html
@@ -6,6 +6,9 @@
   class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-card class="ion-padding" *ngIf="conditionDataResponse?.data?.desc">
     <div class="content">
       <p
