--- a/src/app/modules/about/about.page.html
+++ b/src/app/modules/about/about.page.html
@@ -6,6 +6,9 @@
   class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-card class="ion-no-margin" *ngIf="aboutDataResponse?.data?.desc">
     <div class="logo">
       <img [src]="aboutDataResponse?.data?.image" />
