--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -7,6 +7,10 @@
 ></app-header>
 
 <ion-content class="ion-padding" >
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <div *ngIf="noItems" class="no-data">
     <p>{{"no items in this section"|translate}}</p>
    </div>
