--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -1,7 +1,7 @@
 <app-header
   [title]="'details'"
   [isEditable]="false"
-  [backwardRoute]="'/tabs/main'"
+  [backwardRoute]='"/tabs/main/categories/${{itemDetails?.id}}"'
   [isMain]="false"
   class="header-height"
 ></app-header>
