--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -11,6 +11,7 @@
         <ion-input
           type="search"
           [(ngModel)]="searchText"
+          enterkeyhint="search"
           placeholder="{{'search here'|translate}}"
         ></ion-input>
         <ion-icon
