--- a/src/global.scss
+++ b/src/global.scss
@@ -270,11 +270,11 @@ ion-tab-bar {
 }
 
 .alert-head.sc-ion-alert-md {
-  padding: 0px !important;
+  padding: 10px !important;
 }
 
 .alert-head.sc-ion-alert-ios {
-  padding: 0px !important;
+  padding: 10px !important;
 }
 .swiper-pagination-bullet-active {
   background-color: var(--ion-color-primary) !important;
@@ -299,4 +299,11 @@ ion-tab-bar {
   width: 15px;
   border-radius: 10px;
   opacity: 0.5;
+}
+
+.my-loading-class {
+  --background: transparent;
+  --spinner-color: var(--ion-color-primary);
+
+  //color: #fff;
 }
