--- a/src/app/modules/auth/login-register/login-register.page.html
+++ b/src/app/modules/auth/login-register/login-register.page.html
@@ -238,10 +238,10 @@
     </ion-card>
     <div class="auth-page-rest">
       <div *ngIf=" authType=='signin'">
-        <p (click)="forgetPassword()" class="forget-password">
+        <p (click)="forgetPassword()" class="forget-password fn-14 dalel-Regular">
           {{"forget-password"|translate}}
         </p>
-        <p (click)="changAuthType('register')" class="auth-text">
+        <p (click)="changAuthType('register')" class="auth-text fn-18 dalel-SemiBold">
           {{"register"|translate}}
         </p>
       </div>
