--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -21,7 +21,7 @@
               [disabled]="slidingNotAvailable"
               expand="block"
               class="btn-custom"
-              (click)="nextSlide($event)"
+              (click)="nextSlide()"
             >
               <span>{{"next"|translate}}</span>
             </ion-button>
@@ -49,7 +49,7 @@
               [disabled]="slidingNotAvailable"
               expand="block"
               class="btn-custom"
-              (click)="nextSlide($event)"
+              (click)="nextSlide()"
             >
               <span>{{"next"|translate}}</span>
             </ion-button>
