--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -55,14 +55,15 @@
     <h5 class="fn-14 dalel-Bold primary-color">{{ "fees"|translate }}</h5>
 
     <div class="fees-details">
+      
       <div>
-        <p class="fn-14 dalel-Bold">
-          {{itemDetails?.price}} {{'currency' |translate}}
+        <p class="fn-14 dalel-Regular">
+          {{itemDetails?.price}} {{'one night' |translate}}
         </p>
       </div>
       <div>
-        <p class="fn-14 dalel-Bold">
-          {{itemDetails?.price}} {{'one night' |translate}}
+        <p class="fn-14 dalel-Regular">
+          {{itemDetails?.price}} {{'currency' |translate}}
         </p>
       </div>
     </div>
