--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -17,7 +17,7 @@
   >
   </ion-calendar>
 
-  <ion-button expand="block" (click)="completeReservation()">
+  <ion-button expand="block" class="reservation-btn" (click)="completeReservation()">
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "complete reservation"|translate}}
     </span>
