--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -11,7 +11,7 @@
       <ion-icon
         [src]="selectedTab==tab.tabName? tab.tabActiveIcon:tab.tabNotActiveIcon"
       ></ion-icon>
-      <ion-label [ngClass]="selectedTab==tab.tabName?'selected-label':''">
+      <ion-label class="fn-12  dalel-Regular" color="secondary" [ngClass]="selectedTab==tab.tabName?'selected-label':''">
         {{tab.tabName|translate}}
       </ion-label>
      
