--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -6,7 +6,7 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding" >
+<ion-content class="ion-padding">
   <div class="item-image">
     <img [src]="itemDetails?.first_image" />
     <ion-icon
@@ -89,19 +89,14 @@
 
   <div class="rules">
     <div class="header">
-      <div>
-        <h5 class="fn-16 dalel-SemiBold">{{"reservation-rules"|translate}}</h5>
-      </div>
+      <h5 class="fn-16 dalel-SemiBold">{{"reservation-rules"|translate}}</h5>
     </div>
     <div>
       <p class="fn-12 dalel-Regular">{{itemDetails?.order_desc}}</p>
     </div>
   </div>
 
-  <ion-button
-    expand="block"
-    (click)=" storeOrder()"
-  >
+  <ion-button expand="block" (click)=" storeOrder()">
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "reserve now"|translate}}
     </span>
