--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -1,5 +1,3 @@
-
-
 .swiper-slide {
   align-items: self-start;
 }
@@ -28,10 +26,12 @@
   .search-bar-input {
     padding-right: 0px;
   }
+
   .search-wrapper {
     border: 1px solid #e1e1e1;
     border-radius: 25px;
     box-shadow: 0 3px 6px rgb(0 0 0 / 8%);
+    --min-height: 40px;
   }
 
   ion-fab-button {
@@ -46,7 +46,6 @@
       }
     }
   }
- 
 
   .filter-fab {
     padding: 0px;
@@ -67,7 +66,7 @@
 .slider-section {
   position: relative;
 
-  .swiper-pagination-bullets{
+  .swiper-pagination-bullets {
     position: absolute;
     text-align: center !important;
     height: 10px;
@@ -82,60 +81,16 @@
     display: inline-block;
     border-radius: 10px !important;
     background: var(--ion-color-secondary) !important;
-    opacity: rgb(var(--ion-color-secondary-rgb), 0.55) !important;
-}
-//   .swiper-pagination-bullet-active {
-//     background-color: rgba(var(--ion-color-primary), 0.5) !important;
-//     height: 10px;
-//     width: 30px !important;
-//     border-radius: 10px;
-//     opacity: 0.5;
-//   }
-//  .swiper-pagination-bullet-active {
-//     background-color: var(--ion-color-primary) !important;
-//     height: 10px;
-//     width: 30px !important;
-//     border-radius: 10px;
-//     height: 20 !important;
-//   }
-  // .swiper-pagination {
-  //   position: absolute;
-  //   bottom: 10px;
-  //   right: 0;
-  //   top: auto !important;
-  //   text-align: center;
-  // }
-  // .swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal {
-  //   height: 20 !important;
-  // }
-  // .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-  // .swiper-pagination-horizontal.swiper-pagination-bullets
-  //   .swiper-pagination-bullet {
-  //   background-color: var(--ion-color-primary) !important;
-  //   height: 10px;
-  //   width: 15px;
-  //   border-radius: 10px;
-  // } 
+    opacity: rgb(var(--ion-color-secondary-rgb), 0.5) !important;
+  }
 
-
-  // .swiper-pagination-bullets {
-  //   top: 37% !important;
-  //   right: 36px;
-  //   left: 32px !important;
-  //   height: fit-content;
-  // }
-
-  // .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
-  //   height: 21 !important;
-  //   display: block;
-  // }
   img {
     border-radius: 10px;
     height: 160px;
     width: 100%;
     object-fit: cover;
+    filter: opacity(34%);
   }
-  //margin-bottom: 23px;
 }
 
 .categories-section {
@@ -147,26 +102,20 @@
   .categories-section-title > div {
     flex-direction: row;
   }
+
   .cat-title-text {
     margin: 10px;
-    font-size: 16px;
-    font-family: "Cairo-SemiBold";
   }
+
   ion-thumbnail {
     margin: 0px;
-    img{
+    img {
       border-radius: 5px;
     }
   }
-  .categories-title {
-    font-size: 18px;
-    font-family: "Cairo-Bold";
-  }
 
   .categories-sub-title {
-    font-size: 14px;
-    font-family: "Cairo-Regular";
-    color: var(--ion-color-secondary);
+    color: var(--ion-color-primary);
     white-space: nowrap;
   }
 
@@ -177,85 +126,12 @@
 
 .naerby-section {
   margin-bottom: 23px;
-  .categories-title {
-    font-size: 18px;
-    font-family: "Cairo-Bold";
+
+  .naerby-section-title {
+    display: flex;
+    justify-content: space-between;
+    div {
+      flex-direction: row;
+    }
   }
-
-  .categories-sub-title {
-    font-size: 14px;
-    font-family: "Cairo-Regular";
-    color: var(--ion-color-secondary);
-    white-space: nowrap;
-  }
-  ion-item::part(native) {
-    padding-inline-start: 0px;
-  }
-
-  // .container {
-  //   position: relative;
-  //   height: 140px;
-  //   img {
-  //     width: 100%;
-  //     height: 140px;
-  //     object-fit: cover;
-  //     object-position: initial;
-  //     border-radius: 10px;
-  //   }
-
-  //   .title {
-  //     position: absolute;
-  //     bottom: 30px;
-  //    // right: 13px;
-  //     color: white;
-  //     p {
-  //       //font-size: 14px;
-  //       margin: 0px;
-  //     //  font-family: "Cairo-Bold";
-  //     }
-  //   }
-
-  //   .location {
-  //     position: absolute;
-  //     bottom: 5px;
-  //   //  right: 10px;
-  //    // font-size: 14px;
-  //    // font-family: "Cairo-Regular";
-  //     ion-icon {
-  //       font-size: 20px;
-  //     }
-  //   }
-
-  //   .location-address {
-  //     position: absolute;
-  //   //  color: white;
-  //   //  font-family: "Cairo-Regular";
-  //    // font-size: 14px;
-  //     bottom: 9px;
-  //    // right: 30px;
-  //     p {
-  //       margin: 0px;
-  //     }
-  //   }
-
-  //   .address-detail {
-  //     position: absolute;
-  //     bottom: 5px;
-  //     //left: 10px;
-  //     ion-icon {
-  //       font-size: 25px;
-  //     }
-  //   }
-  // }
 }
-// .swiper-pagination-bullet-inactive {
-//   background-color: rgba(var(--ion-color-primary), 0.5) !important;
-// }
-
-// .swiper-pagination-bullet-active {
-//   background-color: var(--ion-color-primary) !important;
-//   height: 10px;
-//   width: 30px !important;
-//   border-radius: 10px;
-//   height: 20 !important;
-// }
