--- a/src/app/modules/tabs/tabs.page.scss
+++ b/src/app/modules/tabs/tabs.page.scss
@@ -1,8 +1,8 @@
-ion-label {
-  font-size: 12px;
-  font-family: "Cairo-Regular";
-  color: var(--ion-color-secondary);
-}
+// ion-label {
+//   font-size: 12px;
+//   font-family: "Cairo-Regular";
+//   color: var(--ion-color-secondary);
+// }
 
 @keyframes updown {
   0% {
@@ -31,27 +31,28 @@ ion-label {
     animation-direction: alternate;
   }
 }
+
 ion-tab-button {
   position: relative;
-// default case
-&::before {
-  background-color: transparent;
-  display: block;
-  content: "";
-  margin: 0 auto;
-  width: 20px;
-  height: 2px;
-}
-// selected case
-&.tab-selected::before {
-  width: 15%;
-  height: 18px;
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  top: -20%;
-  right: 42%;
-  margin: 0 auto;
-  background-color: var(--ion-color-primary);
-}
+  // default case
+  &::before {
+    background-color: transparent;
+    display: block;
+    content: "";
+    margin: 0 auto;
+    width: 20px;
+    height: 2px;
+  }
+  // selected case
+  &.tab-selected::before {
+    width: 15%;
+    height: 16px;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    top: -20%;
+    right: 42%;
+    margin: 0 auto;
+    background-color: var(--ion-color-primary);
+  }
 }
