--- a/src/global.scss
+++ b/src/global.scss
@@ -50,18 +50,22 @@
   ion-menu {
     --ion-backdrop-color: var(--ion-color-dark-black);
   }
-  --ion-text-transform:lowercase !important;
+  --ion-text-transform: lowercase !important;
 }
 
 :root[dir="rtl"] {
-  ion-menu::part(container) {
-    border-radius: 80px 0px 0px 0px;
+  ion-menu {
+    &::part(container) {
+      border-radius: 80px 0px 0px 0px;
+    }
   }
 }
 
 :root[dir="ltr"] {
-  ion-menu::part(container) {
-    border-radius: 0px 80px 0px 0px;
+  ion-menu {
+    &::part(container) {
+      border-radius: 0px 80px 0px 0px;
+    }
   }
 }
 
@@ -75,17 +79,19 @@
 }
 
 ion-badge {
-  height: 18px;
-  width: 18px;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
   text-align: center;
   span {
-    font-size: 10px;
+    font-size: 9px;
   }
 }
+
 .badge-color {
   color: var(--ion-color-white);
 }
+
 .my-custom-class {
   div#alert-1-msg {
     margin-top: 13px !important;
@@ -99,12 +105,11 @@ ion-badge {
     }
   }
 }
+
 .ng-otp-input-wrapper[_ngcontent-vvk-c142] .otp-input[_ngcontent-vvk-c142] {
   margin-right: 8px !important;
 }
-// .focused {
-//   background-color: var(--ion-color-primary) !important;
-// }
+
 .unfocused {
   --border-color: var(--ion-color-secondary) !important;
 }
@@ -116,9 +121,11 @@ ion-input {
 .swiper-slide {
   display: block !important;
 }
+
 .arabic_padding {
   padding-right: 36px !important;
 }
+
 .english_padding {
   padding-left: 36px !important;
 }
@@ -235,28 +242,27 @@ ion-input {
     margin-top: 24px;
     margin-bottom: 16px;
     .forget-password {
-      font-size: 14px;
-      font-family: "Cairo-Regular";
+      //font-size: 14px;
+      //font-family: "Cairo-Regular";
       color: var(--ion-color-primary);
       text-align: center;
     }
     .auth-text {
-      font-size: 18px;
-      font-family: "Cairo-SemiBold";
+      //font-size: 18px;
+      //font-family: "Cairo-SemiBold";
       text-align: center;
     }
   }
 }
 
 ion-tab-bar {
-  --background: #fad9c5 !important; //rgba(var(--ion-color-secondary-rgb), 0.2) !important;
+  --background: var(--ion-color-orange-light) !important;
   margin: 16px;
   border-radius: 5px;
 
   ion-tab-button {
     ion-icon {
       width: 16px;
-      height: 14.4px;
     }
   }
 }
@@ -304,6 +310,8 @@ ion-tab-bar {
 .my-loading-class {
   --background: transparent;
   --spinner-color: var(--ion-color-primary);
+}
 
-  //color: #fff;
+ion-fab-button {
+  --box-shadow: none !important;
 }
