--- a/src/app/components/custom-card/custom-card.component.scss
+++ b/src/app/components/custom-card/custom-card.component.scss
@@ -11,7 +11,8 @@ ion-card {
     object-position: initial;
 
     border-radius: 5px;
-    opacity: 0.62;
+    //opacity: 0.62;
+    //filter: brightness(0.62);
   }
 
   .title {
