--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -18,6 +18,7 @@
   <app-custom-card
     [itemDetails]="item"
     [forwardRoute]="'/tabs/main'"
+    [cardBrightness]="'0.53'"
     *ngFor="let item of sectionAllItems"
   ></app-custom-card>
 
