--- a/src/app/modules/my-reservations/my-reservations.page.scss
+++ b/src/app/modules/my-reservations/my-reservations.page.scss
@@ -59,6 +59,7 @@ ion-card {
       height: 160px;
       object-fit: cover;
       object-position: initial;
+      filter:brightness(0.34);
     }
 
     .title {
