--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -1,7 +1,7 @@
 <app-header
   [title]="'details'"
   [isEditable]="false"
-  [backwardRoute]='"/tabs/main/categories/${{itemDetails?.id}}"'
+  [backwardRoute]='"/tabs/main/categories/"'
   [isMain]="false"
   class="header-height"
 ></app-header>
@@ -72,8 +72,8 @@
       class="custom-swiper"
       [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     >
-      <ng-template swiperSlide *ngFor="let image of itemDetails?.images">
-        <img class="slider-image" [src]="image.image" />
+      <ng-template swiperSlide *ngFor="let image of itemDetails?.images" >
+        <img (click)="openPreview(itemDetails?.images)" class="slider-image" [src]="image.image" />
       </ng-template>
     </swiper>
   </div>
