--- a/src/app/modules/auth/chnage-password/chnage-password.page.html
+++ b/src/app/modules/auth/chnage-password/chnage-password.page.html
@@ -6,7 +6,7 @@
 
     <ion-card class="auth-container">
       <div class="auth-container-title">
-        <h5>{{ "password-change"|translate}}</h5>
+        <h5 class="fn-24 dalel-Bold">{{ "password-change"|translate}}</h5>
       </div>
 
       <form
