--- a/src/app/modules/auth/code/code.page.html
+++ b/src/app/modules/auth/code/code.page.html
@@ -11,10 +11,10 @@
     </ion-card> -->
     <ion-card class="auth-container">
       <div class="auth-container-title">
-        <h5>{{"code-verification"|translate}}</h5>
+        <h5 class="fn-24 dalel-Bold">{{"code-verification"|translate}}</h5>
       </div>
 
-      <div class="auth-container-sub-title">
+      <div class="auth-container-sub-title fn-14 dalel-Regular">
         <p>{{"enter code sent to mobile"|translate}}</p>
       </div>
 
