--- a/src/app/modules/auth/phone-number/phone-number.page.html
+++ b/src/app/modules/auth/phone-number/phone-number.page.html
@@ -6,10 +6,10 @@
 
     <ion-card class="auth-container">
       <div class="auth-container-title">
-        <h5>{{"phone-number"|translate}}</h5>
+        <h5 class="fn-24 dalel-Bold">{{"phone-number"|translate}}</h5>
       </div>
 
-      <div class="auth-container-sub-title">
+      <div class="auth-container-sub-title fn-14 dalel-Regular">
         <p>{{"enter phone-number to send code"|translate}}</p>
       </div>
 
