--- a/src/app/modules/contact-us/contact-us.page.scss
+++ b/src/app/modules/contact-us/contact-us.page.scss
@@ -15,8 +15,8 @@
   }
 }
 
-ion-item{
-  --highlight-color-focused:var(--ion-color-primary);
-  --highlight-color-valid:var(--ion-color-primary);
-  --highlight-color-invalid:var(--ion-color-primary);
-}
+// ion-item{
+//   --highlight-color-focused:var(--ion-color-primary);
+//   --highlight-color-valid:var(--ion-color-primary);
+//   --highlight-color-invalid:var(--ion-color-primary);
+// }
